# Hypercap-CC-NLP

./: .env  .env.example  .gitignore  AGENTS.md  Ascertainment_Overlap_Intersections.xlsx  BigQuery MIMICIV Tabular Dataset Gen.ipynb  CONTINUITY.md  Chart Review Sample Calc.qmd  HyperCapnic.ipynb  Hypercap CC NLP Analysis.ipynb  Hypercap CC NLP Analysis.qmd  Hypercap CC NLP Classifier.ipynb  Hypercap CC NLP Classifier.qmd  ICD_Positive_Subset_Breakdown.xlsx  ICD_vs_Gas_Performance.xlsx  MIMICIV_first_ABG_VBG_episode_notebook.ipynb  MIMICIV_hypercap_EXT_cohort.ipynb  MIMICIV_hypercap_EXT_cohort.qmd  MIMIC_hypercap_bq_abg_vbg_20251012_165225.parquet  MIMIC_hypercap_bq_abg_vbg_20251012_165225.xlsx  MIMIC_hypercap_bq_abg_vbg_20251012_171717.parquet  MIMIC_hypercap_bq_abg_vbg_20251012_171717.xlsx  MIMIC_hypercap_bq_abg_vbg_20251012_173912.parquet  MIMIC_hypercap_bq_abg_vbg_20251012_182836.parquet  MIMIC_hypercap_bq_abg_vbg_20251012_182836.xlsx  Makefile  README.md  RM HyperCapnic Aug 25.ipynb  Rater Agreement Analysis.ipynb  Rater Agreement Analysis.qmd  Symptom_Composition_Pivot_ChartReady.xlsx  Symptom_Composition_by_ABG_VBG_Overlap.xlsx  Symptom_Composition_by_Gas_Source_Overlap.xlsx  Symptom_Composition_by_Hypercapnia_Definition.xlsx  Symptom_Composition_by_ICD_Gas_Overlap.xlsx  _quarto.yml  current_columns.json  environment.yml  lab_item_map.json  lab_unit_audit.csv  (+4 more)
Annotation/: 2025-10-14 Annotation Sample.xlsx  Annot_test_icd_MIMIC_hypercap.xlsx  Annotators Guide v0.1 MIMIC IV Chief Complaint to NHAMCS RVS.docx  BL Annot_test_icd_MIMIC_hypercap.xlsx  (+8 more)
(+372 files in other folders)
